@@ -1,8 +1,8 @@
 package org.squad.careerhub.domain.application.service;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-
-import java.time.LocalDateTime;
+import static org.squad.careerhub.global.utils.DateTimeUtils.now;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -10,9 +10,8 @@ import org.squad.careerhub.TestDoubleSupport;
 import org.squad.careerhub.domain.application.entity.ApplicationStatus;
 import org.squad.careerhub.domain.application.entity.StageType;
 import org.squad.careerhub.domain.application.entity.SubmissionStatus;
-import org.squad.careerhub.domain.application.service.dto.NewEtcSchedule;
+import org.squad.careerhub.domain.schedule.service.dto.NewEtcSchedule;
 import org.squad.careerhub.domain.application.service.dto.NewStage;
-import org.squad.careerhub.domain.schedule.enums.InterviewType;
 import org.squad.careerhub.domain.schedule.service.dto.NewInterviewSchedule;
 import org.squad.careerhub.global.error.CareerHubException;
 import org.squad.careerhub.global.error.ErrorStatus;
@@ -25,34 +24,39 @@ class ApplicationPolicyValidatorTest extends TestDoubleSupport {
     @Test
     void 기타_일정은_기타_전형일_때만_가능하다() {
         // given
-        var etcNewStage = NewStage.builder()
-                .stageType(StageType.ETC)
-                .newEtcSchedules(List.of(new NewEtcSchedule("코딩 테스트", LocalDateTime.now(), LocalDateTime.now().plusDays(2))))
-                .newInterviewSchedules(List.of())
-                .build();
+        var etcNewStage = new NewStage(
+            StageType.ETC,
+            null,
+            null,
+            Collections.singletonList(
+                new NewEtcSchedule(StageType.ETC, "코딩 테스트", now(), null)),
+            List.of()
+        );
 
-        var documentStage = NewStage.builder()
-                .stageType(StageType.DOCUMENT)
-                .submissionStatus(SubmissionStatus.SUBMITTED)
-                .newEtcSchedules(List.of(new NewEtcSchedule("코딩 테스트", LocalDateTime.now(), LocalDateTime.now().plusDays(2))))
-                .newInterviewSchedules(List.of())
-                .build();
+        var documentStage = new NewStage(
+            StageType.DOCUMENT,
+            SubmissionStatus.SUBMITTED,
+            null,
+            Collections.singletonList(new NewEtcSchedule(
+                StageType.ETC,
+                "코딩테스트",
+                now().plusDays(3),
+                null
+            )),
+            List.of()
+        );
 
         var interviewStage = NewStage.builder()
                 .stageType(StageType.INTERVIEW)
-                .newEtcSchedules(List.of(new NewEtcSchedule("코딩 테스트", LocalDateTime.now(), LocalDateTime.now().plusDays(2))))
-                .newInterviewSchedules(
-                        List.of(new NewInterviewSchedule("1차 면접", InterviewType.EXECUTIVE, LocalDateTime.now(), "서울 본사"))
-                )
+                .newEtcSchedules(List.of(new NewEtcSchedule(StageType.ETC, "코딩 테스트", now(), now().plusDays(2))))
+                .newInterviewSchedules(List.of())
                 .build();
 
         var finalStage = NewStage.builder()
                 .stageType(StageType.APPLICATION_CLOSE)
                 .finalApplicationStatus(ApplicationStatus.FINAL_PASS)
-                .newEtcSchedules(List.of(new NewEtcSchedule("코딩 테스트", LocalDateTime.now(), LocalDateTime.now().plusDays(2))))
-                .newInterviewSchedules(
-                        List.of(new NewInterviewSchedule("1차 면접", InterviewType.EXECUTIVE, LocalDateTime.now(), "서울 본사"))
-                )
+                .newEtcSchedules(List.of(new NewEtcSchedule(StageType.ETC, "코딩 테스트", now(), now().plusDays(2))))
+                .newInterviewSchedules(List.of())
                 .build();
 
         // when & then
@@ -77,27 +81,27 @@ class ApplicationPolicyValidatorTest extends TestDoubleSupport {
         // given
         var etcNewStage = NewStage.builder()
                 .stageType(StageType.ETC)
-                .newEtcSchedules(List.of())
                 .newInterviewSchedules(
-                        List.of(new NewInterviewSchedule("1차 면접", InterviewType.EXECUTIVE, LocalDateTime.now(), "서울 본사"))
+                        List.of(new NewInterviewSchedule(StageType.INTERVIEW, "1차 면접", now(), "서울 본사"))
                 )
+                .newEtcSchedules(List.of())
                 .build();
 
         var documentStage = NewStage.builder()
                 .stageType(StageType.DOCUMENT)
                 .submissionStatus(SubmissionStatus.SUBMITTED)
-                .newEtcSchedules(List.of())
                 .newInterviewSchedules(
-                        List.of(new NewInterviewSchedule("1차 면접", InterviewType.EXECUTIVE, LocalDateTime.now(), "서울 본사"))
+                        List.of(new NewInterviewSchedule(StageType.INTERVIEW, "1차 면접", now(), "서울 본사"))
                 )
+                .newEtcSchedules(List.of())
                 .build();
 
         var interviewStage = NewStage.builder()
                 .stageType(StageType.INTERVIEW)
-                .newEtcSchedules(List.of())
                 .newInterviewSchedules(
-                        List.of(new NewInterviewSchedule("1차 면접", InterviewType.EXECUTIVE, LocalDateTime.now(), "서울 본사"))
+                        List.of(new NewInterviewSchedule(StageType.INTERVIEW, "1차 면접", now(), "서울 본사"))
                 )
+                .newEtcSchedules(List.of())
                 .build();
 
         var finalStage = NewStage.builder()
@@ -105,7 +109,7 @@ class ApplicationPolicyValidatorTest extends TestDoubleSupport {
                 .finalApplicationStatus(ApplicationStatus.FINAL_PASS)
                 .newEtcSchedules(List.of())
                 .newInterviewSchedules(
-                        List.of(new NewInterviewSchedule("1차 면접", InterviewType.EXECUTIVE, LocalDateTime.now(), "서울 본사"))
+                        List.of(new NewInterviewSchedule(StageType.INTERVIEW, "1차 면접", now(), "서울 본사"))
                 )
                 .build();
         // when & then
